--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="watch_out_big_cars">Watch out for big cars</string>
     <string name="stay_away">Stay away from big cars turning the corners</string>
     <string name="skip">Skip</string>
-
+    <string name="facebook_app_id">864495967226572</string>
+    <string name="fb_login_protocol_scheme">fb864495967226572</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
