--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="guest_login"><u>Guest Sign In</u></string>
-    <string name="by_sign_up">By signing up, I agree to #atençãopeão\'s</string>
+    <string name="by_sign_up">By signing up, I agree to <b>#atençãopeão\'s</b></string>
     <string name="terms_of_service"><u>Terms of Service</u></string>
     <string name="and"><![CDATA[&]]></string>
     <string name="privacy_policy"><u>Privacy Policy</u></string>
@@ -17,7 +17,7 @@
     <string name="select_region">Which region do you belong?</string>
     <string name="portugal">Portugal</string>
     <string name="brazil">Brazil</string>
-    <string name="feed_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
+    <string name="feed_desc">Lorem Ipsum is simply dummy text of the printing and andtypesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged</string>
     <string name="feed">Feed</string>
     <string name="settings">Settings</string>
     <string name="map">Map</string>
@@ -29,4 +29,7 @@
     <string name="add_incident_location">Add incident location</string>
     <string name="add_your_current_location">Add your current location</string>
     <string name="or">Or</string>
+    <string name="select_location_from_map">Select location from map</string>
+    <string name="close">Close</string>
+    <string name="please_wait">Please Wait...</string>
 </resources>
