--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="acidente">Acidente</string>
     <string name="all_incidents">All incidents</string>
     <string name="road_safety_feed">Road Safety Feed</string>
+    <string name="description">Discription</string>
+    <string name="incident_location">Incident location</string>
 </resources>
