Current location on Map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="description">Discription</string>
     <string name="incident_location">Incident location</string>
     <string name="incident_reported">incident reported</string>
+    <string name="view_more">View more</string>
 </resources>
