--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="incident_location">Incident location</string>
     <string name="incident_reported">incident reported</string>
     <string name="view_more">View more</string>
+    <string name="ok">Ok</string>
 </resources>
