--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="incident_reported">incident reported</string>
     <string name="view_more">View more</string>
     <string name="ok">Ok</string>
+    <string name="save">Save</string>
 </resources>
