--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="view_more">View more</string>
     <string name="ok">Ok</string>
     <string name="save">Save</string>
+    <string name="next">Next</string>
 </resources>
