--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="accident">Accident</string>
     <string name="necessary_intervention">Necessary Intervention</string>
     <string name="marcar_local">Marcar Local</string>
+    <string name="incidents">Incidents</string>
 </resources>
