image upload, abuse report

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,8 +55,8 @@
     <string name="edit">Edit</string>
     <string name="incident_deleted_success">Incident has been deleted</string>
     <string name="incident_update">Incident has been updated</string>
-    <string name="report_abuse">Report abuse</string>
-    <string name="comment">Comment</string>
+    <string name="report_abuse_">Report abuse</string>
+    <string name="add_description_here">Enter your description here</string>
     <string name="submit">Submit</string>
     <string name="incident_created">Incident has been created</string>
     <string name="report_abuse_msg">Abuse report has been submit</string>
@@ -64,4 +64,9 @@
     <string name="comment_error">Please add your comment</string>
     <string name="profile">Profile</string>
     <string name="no_linked_account">No account linked.</string>
+    <string name="upload_success">Image has been uploaded</string>
+    <string name="file_not_found">File Not Found!</string>
+    <string name="image_error">Please upload atleast one image</string>
+    <string name="add_image_validation">You can add only maximum three images</string>
+    <string name="add_description">Add description</string>
 </resources>
