--- a/facebooklogin/src/main/res/values/strings.xml
+++ b/facebooklogin/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="com_facebook_requesterror_password_changed">Your Facebook password has changed. Please log into this app again to reconnect your Facebook account.</string>
     <string name="com_facebook_requesterror_reconnect">Please log into this app again to reconnect your Facebook account.</string>
     <string name="com_facebook_requesterror_permissions">This app doesn’t have permission to do this. To change permissions, try logging into the app again.</string>
+    <string name="allow_location_services">Allow location services</string>
 </resources>
 
 
