--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="notifications">Notifications</string>
     <string name="location_services">Location services</string>
     <string name="add_incident_location">Add incident location</string>
-    <string name="delete_alert_text">Are You Sure You Want To Delete This Post?</string>
+    <string name="delete_alert_text">Are you sure you want to delete this post?</string>
 
     <string name="add_your_current_location">Add your current location</string>
     <string name="or">Or</string>
@@ -66,8 +66,9 @@
     <string name="no_linked_account">No account linked.</string>
     <string name="upload_success">Image has been uploaded</string>
     <string name="file_not_found">File Not Found!</string>
-    <string name="image_error">Please upload atleast one image</string>
+    <string name="image_error">Please upload at least one image</string>
     <string name="add_image_validation">You can add only maximum three images</string>
     <string name="add_description">Add description</string>
-    <string name="logout_confirm">Are You Sure You Want To logout?</string>
+    <string name="logout_confirm">Are you sure you want to logout?</string>
+    <string name="long_press_on_map">Please long press on map to add your location</string>
 </resources>
