--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="acidente">Acidente</string>
     <string name="all_incidents">All incidents</string>
     <string name="road_safety_feed">Road Safety Feed</string>
-    <string name="description">Discription</string>
+    <string name="description">Description</string>
     <string name="incident_location">Incident location</string>
     <string name="incident_reported">incident reported</string>
     <string name="view_more">View more</string>
@@ -71,4 +71,7 @@
     <string name="add_description">Add description</string>
     <string name="logout_confirm">Are you sure you want to logout?</string>
     <string name="long_press_on_map">Please long press on map to add your location</string>
+    <string name="are_you_sure_you_want_to_disable_location_services">Are you sure you want to disable your location services?</string>
+    <string name="disable">Disable</string>
+    <string name="successfully_added">Successfully Added!!!</string>
 </resources>
