--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -73,4 +73,13 @@
     <string name="add_description">Add description</string>
     <string name="logout_confirm">Are you sure you want to logout?</string>
     <string name="long_press_on_map">Please long press on map to add your location</string>
+    <string name="are_you_sure_you_want_to_disable_location_services">Are you sure you want to disable your location services?</string>
+    <string name="disable">Disable</string>
+    <string name="successfully_added">Successfully Added!!!</string>
+    <string name="view_in_map">View in map</string>
+    <string name="share">Share</string>
+    <string name="notification_recieved">A new notification has been received about the incident happened near to you</string>
+    <string name="no_notification_found">No notification found.</string>
+    <string name="incident_resolved">Incident Resolved</string>
+
 </resources>
