Add incident change, report abuse

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,9 @@
     <string name="notification_recieved">A new notification has been received about the incident happened near to you</string>
     <string name="no_notification_found">No notification found.</string>
     <string name="incident_resolved">Incident Resolved</string>
+    <string name="are_you_sure_you_want_to_reolved_incident">Are you sure you want to resolve this incident?</string>
+    <string name="this_incident_resolved">this incident is resolved</string>
+    <string name="incident_has_been_resolved">Incident has been resolved</string>
+    <string name="are_you_sure_you_want_to_remove_this_image">Are you sure you want to remove this image?</string>
 
 </resources>
