--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,8 @@
     <string name="this_incident_resolved">this incident is resolved</string>
     <string name="incident_has_been_resolved">Incident has been resolved</string>
     <string name="are_you_sure_you_want_to_remove_this_image">Are you sure you want to remove this image?</string>
+    <string name="incident_reported_text">There is a new incident reported in your area</string>
+    <string name="incident_resolved_text">The reported incident in your area has been resolved , Click here to view images of the measures taken</string>
+    <string name="incident_blocked_text">Your post has been blocked/deleted by the admin</string>
 
 </resources>
