--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -81,5 +81,11 @@
     <string name="notification_recieved">A new notification has been received about the incident happened near to you</string>
     <string name="no_notification_found">No notification found.</string>
     <string name="incident_resolved">Incident Resolved</string>
-
+    <string name="are_you_sure_you_want_to_reolved_incident">Are you sure you want to resolve this incident?</string>
+    <string name="this_incident_resolved">this incident is resolved</string>
+    <string name="incident_has_been_resolved">Incident has been resolved</string>
+    <string name="are_you_sure_you_want_to_remove_this_image">Are you sure you want to remove this image?</string>
+    <string name="incident_reported_text">There is a new incident reported in your area</string>
+    <string name="incident_resolved_text">The reported incident in your area has been resolved , Click here to view images of the measures taken</string>
+    <string name="incident_blocked_text">Your post has been blocked/deleted by the admin</string>
 </resources>
