--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -48,47 +48,49 @@
     <string name="next">Seguinte</string>
 
 
-    <string name="accident">Accident</string>
-    <string name="necessary_intervention">Necessary Intervention</string>
-    <string name="marcar_local">Marcar Local</string>
-    <string name="incidents">Incidents</string>
-    <string name="add_location">Add location</string>
-    <string name="add_location_error">Please add incident location on map using long press</string>
-    <string name="edit">Edit</string>
-    <string name="incident_deleted_success">Incident has been deleted</string>
-    <string name="incident_update">Incident has been updated</string>
-    <string name="report_abuse_">Report abuse</string>
-    <string name="add_description_here">Enter your description here</string>
-    <string name="submit">Submit</string>
-    <string name="incident_created">Incident has been created</string>
-    <string name="report_abuse_msg">Abuse report has been submit</string>
-    <string name="description_error">Please add description</string>
-    <string name="comment_error">Please add your comment</string>
-    <string name="profile">Profile</string>
-    <string name="no_linked_account">No account linked.</string>
-    <string name="upload_success">Image has been uploaded</string>
-    <string name="file_not_found">File Not Found!</string>
-    <string name="image_error">Please upload at least one image</string>
-    <string name="add_image_validation">You can add only maximum three images</string>
-    <string name="add_description">Add description</string>
-    <string name="logout_confirm">Are you sure you want to logout?</string>
-    <string name="long_press_on_map">Please long press on map to add your location</string>
-    <string name="are_you_sure_you_want_to_disable_location_services">Are you sure you want to disable your location services?</string>
-    <string name="disable">Disable</string>
-    <string name="successfully_added">Successfully Added!!!</string>
-    <string name="view_in_map">View in map</string>
-    <string name="share">Share</string>
+    <string name="accident">Acidente</string>
+    <string name="necessary_intervention">Necessita intervenção</string>
+    <string name="marcar_local">Sugestão melhoria</string>
+    <string name="incidents">Locais</string>
+    <string name="add_location">Adicionar local</string>
+    <string name="add_location_error">Por favor adicione local no mapa premindo longamente</string>
+    <string name="edit">Alterar</string>
+    <string name="incident_deleted_success">Local foi apagado</string>
+    <string name="incident_update">Local foi alterado</string>
+    <string name="report_abuse_">Denunciar marcação abusiva</string>
+    <string name="add_description_here">Adicione uma descrição</string>
+    <string name="submit">Submeter</string>
+    <string name="incident_created">Local foi marcado</string>
+    <string name="report_abuse_msg">Denúncia submetida</string>
+    <string name="description_error">Por favor adicione descrição</string>
+    <string name="comment_error">Por favor adicione comentário</string>
+    <string name="profile">Perfil</string>
+    <string name="no_linked_account">Nenhuma conta associada</string>
+    <string name="upload_success">Imagem submetida</string>
+    <string name="file_not_found">Ficheiro não encontrado</string>
+    <string name="image_error">Por favor adicione pelo menos uma imagem</string>
+    <string name="add_image_validation">Pode adicionar no máximo três imagens</string>
+    <string name="add_description">Adicione uma descrição</string>
+    <string name="logout_confirm">Tem a certeza que quer sair?</string>
+    <string name="long_press_on_map">Por favor pressione longamente para adicionar local</string>
+    <string name="are_you_sure_you_want_to_disable_location_services">Tem a certeza que quer desligar os serviços de localização?</string>
+    <string name="disable">Desligar</string>
+    <string name="successfully_added">Marcação bem sucedida</string>
+    <string name="view_in_map">Ver no mapa</string>
+    <string name="share">Partilhar</string>
     <string name="notification_recieved">A new notification has been received about the incident happened near to you</string>
-    <string name="no_notification_found">No notification found.</string>
-    <string name="incident_resolved">Incident Resolved</string>
-    <string name="are_you_sure_you_want_to_reolved_incident">Are you sure you want to resolve this incident?</string>
-    <string name="this_incident_resolved">this incident is resolved</string>
-    <string name="incident_has_been_resolved">Incident has been resolved</string>
-    <string name="are_you_sure_you_want_to_remove_this_image">Are you sure you want to remove this image?</string>
-    <string name="incident_reported_text">There is a new incident reported in your area</string>
-    <string name="incident_resolved_text">The reported incident in your area has been resolved , Click here to view images of the measures taken</string>
-    <string name="incident_blocked_text">Your post has been blocked/deleted by the admin</string>
-    <string name="internet_permission">No network connectivity - This App requires an internet connection.</string>
-    <string name="retry">Retry</string>
-    <string name="done">Done</string>
+    <string name="no_notification_found">Nenhuma notificação encontrada</string>
+    <string name="incident_resolved">Situação resolvida </string>
+
+
+    <string name="are_you_sure_you_want_to_reolved_incident">Tem a certeza que quer marcar o local como resolvido?</string>
+    <string name="this_incident_resolved">A marcação foi resolvida</string>
+    <string name="incident_has_been_resolved">Esta marcação já foi resolvida</string>
+    <string name="are_you_sure_you_want_to_remove_this_image">Tem a certeza que quer remover esta imagem?</string>
+    <string name="incident_reported_text">Existe um novo local marcado na sua área</string>
+    <string name="incident_resolved_text">O local marcado na sua área foi resolvido. Clique aqui para ver as imagens.</string>
+    <string name="incident_blocked_text">A sua marcação foi bloqueada pelo administrador do sistema</string>
+    <string name="internet_permission">Sem conectividade. Esta aplicação requer uma ligação para a internet.</string>
+    <string name="retry">Tente novamente</string>
+    <string name="done">feito</string>
 </resources>
