--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,5 +92,14 @@
     <string name="internet_permission">No network connectivity - This App requires an internet connection.</string>
     <string name="retry">Retry</string>
     <string name="done">Done</string>
+    <string name="contact_us">Contact Us</string>
+    <string name="terms">Terms</string>
+    <string name="privacy">Privacy</string>
+    <string name="please_share_your_thought">Please share your thought on following email.</string>
+    <string name="email">email.id@yourdomain.com</string>
+    <string name="city_hall_search">Search city hall</string>
+    <string name="city_halls">City halls</string>
+    <string name="select_city_hall">Select city hall</string>
+    <string name="please_select_city_hall">Please select city hall</string>
 
 </resources>
