--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Road Safety</string>
+    <string name="app_name">#atençãopeão</string>
     <string name="title_activity_incident_maps">Map</string>
     <string name="watch_out_big_cars">Watch out for big cars</string>
     <string name="stay_away">Stay away from big cars turning the corners</string>
