--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -21,7 +21,7 @@
     <string name="feed">Notícias</string>
     <string name="settings">Definições</string>
     <string name="map">Mapa</string>
-    <string name="profile_picture">Imagem de perfil</string>
+    <string name="profile_picture">Instruções</string>
     <string name="logout">Sair</string>
     <string name="linked_acccount">Conta</string>
     <string name="notifications">Notificações</string>
