--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,5 +105,6 @@
     <string name="incidents_reported">incidents reported</string>
     <string name="allow_location_services_">Allow location services</string>
     <string name="goto_incidents">Show incidents</string>
+    <string name="instruction">Utilize o Mapa para marcar ou consultar locais que necessitam de intervenção. Clique em + para indicar o local, adicione até 3 fotografias, uma descrição e indique qual a Camâra Municipal que deve ser informada. Após validação, essa informação será enviada. Será notificado quando o estado da mesma evoluir. Participe para o bem de todos. Obrigado.</string>
 
 </resources>
